--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon ./app.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -17,7 +18,8 @@
     "mongoose": "^8.5.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^5.0.7"
+    "nanoid": "^5.0.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
